# qt-cmake-ui-template

./: CMakeLists.txt  README.md  dialog.cpp  dialog.ui  resource.qrc  test_cmake_ui.pro
